--- a/frontend/src/app/components/categories/categories.component.html
+++ b/frontend/src/app/components/categories/categories.component.html
@@ -41,7 +41,7 @@
                             <button class="btn btn-outline-warning btn-sm" (click)="get(category)" data-bs-toggle="modal" data-bs-target="#updateModal">
                                 <i class="fa fa-edit"></i>
                             </button>
-                            <button class="btn btn-outline-danger btn-sm mx-1">
+                            <button class="btn btn-outline-danger btn-sm mx-1" (click)="removeById(category)">
                                 <i class="fa fa-trash"></i>
                             </button>
                         </td>
