--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -47,7 +47,7 @@
                         <p><strong>Kalan Adet: {{product.stock}}</strong></p>
                         <hr>
                         <h4 class="alert alert-danger">Adet Fiyatı: {{product.price | trCurrency: '₺'}}</h4>
-                        <button [disabled]="product.stock <= 0" class="btn btn-outline-success w-100">Sepete Ekle</button>
+                        <button (click)="addBasket(product._id, product.price)" [disabled]="product.stock <= 0" class="btn btn-outline-success w-100">Sepete Ekle</button>
                     </div>
                 </div>
             </div>
