--- a/frontend/src/app/components/layouts/navbar/navbar.component.html
+++ b/frontend/src/app/components/layouts/navbar/navbar.component.html
@@ -31,7 +31,7 @@
         
             
        
-        <button class="btn btn-outline-danger mx-1" type="button">Çıkış Yap</button>
+        <button routerLink="/login" class="btn btn-outline-danger mx-1" type="button">Çıkış Yap</button>
       </div>
     </div>
   </nav>
